--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": ".",
+  "name": "payload-test",
   "description": "Website template for Payload",
   "version": "1.0.0",
   "main": "dist/server.js",
